found a way to create contrast with blog and bg. Use a fixed overlay with negative z index to obtain whichever bg color you want for the page

--- a/src/index.css
+++ b/src/index.css
@@ -224,9 +224,11 @@ h2 {
 .ql-editor span,
 .ql-editor p,
 .ql-editor li {
+  font-size: 1.7rem !important;
+}
+.ql-editor strong {
   font-size: 2rem !important;
 }
-
 .ql-editor p,
 .ql-editor li {
   line-height: 4.5rem;
